# rl-mlops-demo

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
logs/runs/: evaluations.npz  training_config_ppo-2000k-seed42.json  training_config_ppo-5000k-seed42.json  training_config_ppo-50k-seed42.json
models/provided-fallback/: config.json  results.json
rl_mlops_demo/: __init__.py  callbacks.py  cli.py  config.py  doctor.py  inference.py  metrics.py  mlflow_tracker.py  play.py  train.py  tune.py  wrappers.py
tests/: test_metrics.py
